--- a/main.html
+++ b/main.html
@@ -9,5 +9,38 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+
+<div class="main">
+
+<div class="ryu">
+
+<div id="textBox">Click on <em>RYU</em> to throw a <em>HADOUKEN</em>...Press 'x' to keep it <em>CLASSY</em></div>
+
+  <div class="ryu-still"></div>
+  <div class="ryu-ready"></div>
+  <div class="ryu-throwing"></div>
+  <div class="ryu-cool"></div>
+  
+  <div id="hadoukenBox">
+  <div class="hadouken"></div>
+  
+  </div>
+  </div>
+  
+  
+ <audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
+  <audio id="smoothJams" src="sound/smoothJams.mp3"></audio>
+  
+
+
+
+  
+  
+  
+
+
+
+
+
 </body>
 </html>
